<resources>
    <string name="app_name">车载姿态检测仪</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="setting">设置</string>
    <string name="alert">修改</string>
    <string name="confirm">确定</string>
    <string name="nav">——————导航角系数设置——————</string>
    <string name="roll">——————俯仰角系数设置——————</string>
    <string name="yaw">——————倾斜角系数设置——————</string>
    <string name="gas">——————可燃气体浓度设置——————</string>
    <string name="nav_12">10°～20°的上下界绝对值：</string>
    <string name="nav_23">20°～30°的上下界绝对值：</string>
    <string name="nav_34">30°～40°的上下界绝对值：</string>
    <string name="nav_45">40°～50°的上下界绝对值：</string>
    <string name="nav_56">50°～60°的上下界绝对值：</string>
    <string name="nav_67">60°～70°的上下界绝对值：</string>
    <string name="nav_78">70°～80°的上下界绝对值：</string>
    <string name="nav_89">80°～90°的上下界绝对值：</string>
    <string name="roll_ud">俯仰角上下界绝对值</string>
    <string name="yaw_ud">倾斜角上下界绝对值</string>
    <string name="gas_info">可燃气体浓度报警值</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_connect" translatable="false">连接设备</string>
    <string name="key_parameter">关键参数显示</string>
    <string name="longitude">经度：</string>
    <string name="latitude">纬度：</string>
    <string name="speed">当前速度：</string>
    <string name="speed_init">0</string>
    <string name="speed_">m/s</string>
    <string name="loading">正在连接中，请稍后～</string>
    <string name="no_support">您的设备不支持蓝牙～</string>
    <string name="close" translatable="false">当前连接已断开</string>
    <string name="start">开始查找设备</string>
    <string name="socket_fail">Socket 创建失败</string>
    <string name="close_fail" translatable="false">Socket 关闭失败</string>
    <string name="steam_fail">Socket 流创建失败</string>
    <string name="socket_success">蓝牙连接正常,Socket 创建成功</string>

    <string name="modle_1">模块1角度</string>
    <string name="modle_2">模块2角度</string>
    <string name="modle_3">模块3角度</string>

    <string name="about_app" translatable="false">物联网开发实验室领沃团队出品</string>
    <string name="finding">尚未查找到设备，请稍后～</string>

    <string name="port">port</string>
    <string name="server_port">请填写服务端的port</string>
    <string name="IP">IP Address</string>
    <string name="server_ip">Local IP：</string>

    <string name="tcp">TCP</string>
    <string name="tcp_client">TcpClient</string>
    <string name="tcp_server">TcpServer</string>
    <string name="other">Other</string>

    <string name="open_GPS">开启GPS</string>
    <string name="disconnect">中断连接</string>

    <string name="about">关于</string>

    <string name="ling_wo">领沃</string>
</resources>
