<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_manage"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/setting" />

    <item android:title="@string/tcp">
        <menu>
            <item
                android:id="@+id/TcpClient"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/tcp_client" />
            <item
                android:id="@+id/TcpServer"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/tcp_server" />
        </menu>
    </item>
    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/gps"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/open_GPS" />
            <item
                android:id="@+id/connect"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_connect" />

            <item
                android:id="@+id/btnQuit"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/disconnect" />
        </menu>
    </item>
    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/ling_wo" />
        </menu>
    </item>

</menu>
