<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/ip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/IP"
        android:inputType="number" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/port"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/port"
        android:inputType="number" />

    <Button
        android:id="@+id/client_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/confirm"
        android:textSize="18sp" />
</LinearLayout>