<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/server_ip"
        android:hint="@string/server_ip"
        android:textSize="18sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/server_port"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/port"
        android:inputType="number" />

    <Button
        android:id="@+id/server_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/confirm"
        android:textSize="18sp" />
</LinearLayout>